Freedom Sanbox Ant Deploy/src/objects/ARPP_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>AnnualizedIN__c</fullName>
        <label>AnnualizedIN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ARPP Trackers</relationshipLabel>
        <relationshipName>ARPP_Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Net_Earnings__c</fullName>
        <label>Net Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trail__c</fullName>
        <formula>AnnualizedIN__c  +  TrainIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrainIN__c</fullName>
        <label>TrainIN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upfront__c</fullName>
        <label>Upfront</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>ARPP Tracker</label>
    <nameField>
        <displayFormat>ARPP-{0000}</displayFormat>
        <label>ARPP Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARPP Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>